# fooling_about

./: .gitignore  .gitmodules  README.md
best_profit/: best_profit.py
decorator/: async.py  decorator.py
fib/: .fib.py.swp  fib.py
foldedlinkedlist/: foldlist.py  readme.md  testfoldlist.py
hostPathVolume/: README.md  deploy.sh  kindcfg.yaml
hostPathVolume/appimage/: index.cgi
hostPathVolume/ingress/: Chart.yaml
hostPathVolume/instance-controller-helm/: Chart.yaml  values.yaml
hostPathVolume/instance_controller_image/: Dockerfile
instance-controller/: .gitignore  deploy.sh  kindcfg.yaml
instance-controller/instance-controller-helm/: values.yaml
instance-controller/instance-controller-image/: Dockerfile  index.cgi
instance-controller/instance_controller_image/: Dockerfile  index.cgi
js/: Variable_Declaration.js  iife.js  inheritance.py  modules.js  mylib.js  package-lock.json  package.json  promises.js
js/amd_loading/: index.html  package-lock.json  package.json
js/basic_webpack/: lib1.js  lib2.js  package-lock.json  package.json  test.js
js/bootstrap-layouts/: index.html  package-lock.json  package.json
js/lab1/: README.md  (+1 more)
jupyter/: scratch.ipynb
longest-subsequence/: getdecimal.py  lss.py  testlongestsubsequence.py  testprintdivision.py
mergesort/: mergesort.py  new.py  untitled
mintree/: mintree.py
progressbar/: Containerfile  pyproject.toml
progressbar/progressbar/: __init__.py  __main__.py
slowfast/: slowfast.py
snap/: snap.py  snaptest.py
status_stream/: README.md
terraform_book/: server.tf
threesum/: threesum.py
(+139 files in other folders)
